--- a/index.html
+++ b/index.html
@@ -7,5 +7,45 @@
 </head>
 <body>
     <h1>Página Inicial</h1>
+
+    <div>
+        <img src="imagens/anel de prata.png" />
+    </div>
+
+    <div>
+        <img src="imagens/brinco fila de coração.png" />
+    </div>
+
+    <div>
+        <img src="imagens/colar coração.png" />
+    </div>
+
+    <div>
+        <img src="imagens/colar de perola.png" />
+    </div>
+
+    <div>
+        <img src="imagens/colar de prata.png" />
+    </div>
+
+    <div>
+        <img src="imagens/iphone 15.png" />
+    </div>
+
+    <div>
+        <img src="imagens/monitor game.png" />
+    </div>
+
+    <div>
+        <img src="imagens/notebook.samsung.png" />
+    </div>
+
+    <div>
+        <img src="imagens/ps5.png" />
+    </div>
+
+    <div>
+        <img src="imagens/robô aspirador.png" />
+    </div>
 </body>
 </html>
