--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página inicial</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <h1>Página Inicial</h1>
@@ -37,7 +38,7 @@
     </div>
 
     <div>
-        <img src="imagens/notebook.samsung.png" />
+        <img src="imagens/notebook samsung.png" />
     </div>
 
     <div>
