adição da marcação de cartela

--- a/bingo.html
+++ b/bingo.html
@@ -20,38 +20,38 @@
                 <tbody>
                     <tr>
                     <td id="b1" onclick="MarcarCartela(this)">10</td><!--B-->
-                    <td id="i1">5</td><!--I-->
-                    <td id="n1">14</td><!--N-->
-                    <td id="g1">7</td><!--G-->
-                    <td id="o1">2</td><!--O-->
+                    <td id="i1" onclick="MarcarCartela(this)">5</td><!--I-->
+                    <td id="n1" onclick="MarcarCartela(this)">14</td><!--N-->
+                    <td id="g1" onclick="MarcarCartela(this)">7</td><!--G-->
+                    <td id="o1" onclick="MarcarCartela(this)">2</td><!--O-->
                 </tr>
                 <tr>
-                    <td id="b2">17</td><!--B-->
-                    <td id="i2">18</td><!--I-->
-                    <td id="n2">21</td><!--N-->
-                    <td id="g2">25</td><!--G-->
-                    <td id="o2">29</td><!--O-->
+                    <td id="b2" onclick="MarcarCartela(this)">17</td><!--B-->
+                    <td id="i2" onclick="MarcarCartela(this)">18</td><!--I-->
+                    <td id="n2" onclick="MarcarCartela(this)">21</td><!--N-->
+                    <td id="g2" onclick="MarcarCartela(this)">25</td><!--G-->
+                    <td id="o2" onclick="MarcarCartela(this)">29</td><!--O-->
                 </tr>
                 <tr>
-                    <td id="b3">33</td><!--B-->
-                    <td id="i3">41</td><!--I-->
-                    <td id="n3">43</td><!--N-->
-                    <td id="g3">37</td><!--G-->
-                    <td id="o3">40</td><!--O-->
+                    <td id="b3" onclick="MarcarCartela(this)">33</td><!--B-->
+                    <td id="i3" onclick="MarcarCartela(this)">41</td><!--I-->
+                    <td id="n3" onclick="MarcarCartela(this)">43</td><!--N-->
+                    <td id="g3" onclick="MarcarCartela(this)">37</td><!--G-->
+                    <td id="o3" onclick="MarcarCartela(this)">40</td><!--O-->
                 </tr>
                 <tr>
-                    <td id="b4">46</td><!--B-->
-                    <td id="i4">48</td><!--I-->
-                    <td id="n4">50</td><!--N-->
-                    <td id="g4">51</td><!--G-->
-                    <td id="o4">60</td><!--O-->
+                    <td id="b4" onclick="MarcarCartela(this)">46</td><!--B-->
+                    <td id="i4" onclick="MarcarCartela(this)">48</td><!--I-->
+                    <td id="n4" onclick="MarcarCartela(this)">50</td><!--N-->
+                    <td id="g4" onclick="MarcarCartela(this)">51</td><!--G-->
+                    <td id="o4" onclick="MarcarCartela(this)">60</td><!--O-->
                 </tr>
                 <tr>
-                    <td id="b5">66</td><!--B-->
-                    <td id="i5">62</td><!--I-->
-                    <td id="n5">69</td><!--N-->
-                    <td id="g5">70</td><!--G-->
-                    <td id="o5">75</td><!--O-->
+                    <td id="b5" onclick="MarcarCartela(this)">66</td><!--B-->
+                    <td id="i5" onclick="MarcarCartela(this)">62</td><!--I-->
+                    <td id="n5" onclick="MarcarCartela(this)">69</td><!--N-->
+                    <td id="g5" onclick="MarcarCartela(this)">70</td><!--G-->
+                    <td id="o5" onclick="MarcarCartela(this)">75</td><!--O-->
                 </tr>
                 </tbody>
             </table>
