--- a/bingo.html
+++ b/bingo.html
@@ -58,7 +58,7 @@
             <br />
 
             <button id="botao" onclick="piscar()">
-                <h1>click</h1>
+                <h1>Piscar</h1>
             </button>
             <button onclick="GerarCartela()" >
                 Gerar Cartela
